--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "cypress": "^4.9.0"
+    "cypress": "^4.9.0",
+    "deep-freeze": "0.0.1"
   }
 }
