--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5"
   },
@@ -39,6 +40,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "cypress": "^4.9.0",
-    "deep-freeze": "0.0.1"
+    "deep-freeze": "0.0.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
